--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,13 @@ before_install:
 
 script:
   - docker run -e CI=true hadi207/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "Dockerreact"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-509893050594"
+  bucket_path: "Dockerreact"
+  on:
+    branch: master
